<resources>
    <string name="app_name">Temné Příběhy</string>

    <string name="title_activity_story">Příběh</string>

    <string name="title_activity_solution">Co se opravdu stalo</string>
    <string name="key_description">Klič k řešení</string>
    <string name="lock_description">Truhla s řešením</string>
    <string name="new_game">Hrát</string>
    <string name="settings">Nastavení</string>
    <string name="download">Stáhni příběhy</string>
    <string name="statistics">Statistiky</string>
    <string name="answer_yes">Ano</string>
    <string name="answer_no">Ne</string>
    <string name="back">Zpět</string>
    <string name="solved">Vyřešeno</string>
    <string name="solution_title">Řešení příběhu:</string>
    <string name="end_game">Konec</string>
    <string name="empty_story">Romeo a Julile leželi na zemi a byli mrtví.</string>
    <string name="empty_story_title">Romeo a Julie</string>

    <string name="transmission_fail">Došlo k chybě přenosu</string>
    <string name="cancel_download">Stahování zrušeno</string>
    <string name="html_fault">Chyba přenosu :</string>
    <string name="title_activity_settings">Settings</string>

    <string name="save">Uložit výsledek</string>
    <string name="cancel">Zrušit</string>
    <string name="congratulation">Výborně, odhalili jste příběh.</string>
    <string name="solution">Odhalili jste příběh s použítím:</string>
    <string name="asks">otázek</string>
    <string name="solution_get">Dostali jste</string>
    <string name="solution_yes">odpověď Ano</string>
    <string name="solution_No">odpověď Ne</string>
    <string name="yes">Ano!</string>
    <string name="no">Ne!</string>
    <string name="download_error">"Chyba stahování: "</string>
    <string name="download_complete">Databáze příběhů byla aktualizována</string>
    <string name="download_error_content">Nelze stáhnout databázi příběhů</string>
    <string name="title_activity_stats">Statistiky</string>
</resources>
