<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="cz.zcu.kiv.vaisr.temnepribehy.temnepribehy.StoryActivity"
    android:id="@+id/fullscreen_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imageKey"
                android:layout_gravity="left|top"
                android:background="@drawable/klic"
                android:contentDescription="@string/key_description"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Romeo a Julie"
                android:id="@+id/storyTitle"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/textPrimary"
                android:layout_gravity="top" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="20" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Romeo a Julile leželi na zemi a byli mrtví."
                android:id="@+id/storyText"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                android:layout_weight="10" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imageLock"
                android:background="@mipmap/ic_launcher"
                android:contentDescription="@string/lock_description"
                android:contextClickable="false"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_yes"
                android:onClick="onYes"
                android:id="@+id/buttonYes"
                android:layout_weight="5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_no"
                android:onClick="onNo"
                android:id="@+id/buttonNo"
                android:layout_weight="5" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/buttonBack"
                android:onClick="onMenu"
                android:layout_weight="5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solved"
                android:id="@+id/buttonSolved"
                android:onClick="onSolved"
                android:layout_weight="5" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
